[workspace]
members = [
  "canbench-bin",
  "canbench-rs",
  "canbench-rs-macros",
  "examples",
  "tests",
]
resolver = "2"

[workspace.dependencies]
candid = "0.10.13"
clap = { version = "4.0.11", features = ["derive"] }
colored = "2.0.4"
flate2 = "1.0.28"
hex = "0.4.3"
ic-cdk = "0.18.0"
ic-cdk-macros = "0.18.0"
proc-macro2 = "1.0"
quote = "1.0"
reqwest = { version = "0.11.23", features = [
  "blocking",
  "rustls-tls-webpki-roots",
], default-features = false }
semver = "1.0.21"
serde = "1.0"
serde_yaml = "0.9"
sha256 = "1.5.0"
syn = "1.0"
tempfile = "3.3.0"
walrus = "0.23.3"
wasmparser = "0.119.0"
pocket-ic = "6.0.0"
rustc-demangle = "0.1"
