[workspace]
members = [
  "canbench-bin",
  "canbench-rs",
  "canbench-rs-macros",
  "examples",
  "tests",
]
resolver = "2"

[workspace.dependencies]
candid = "0.10.14"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
flate2 = "1.1.2"
hex = "0.4.3"
ic-cdk = { git = "https://github.com/dfinity/cdk-rs.git", rev = "c71f7e8adad3970d611139651be96c69c558d416" } # branch spofford/concurrent-closures
proc-macro2 = "1.0.95"
quote = "1.0.40"
reqwest = { version = "0.12.20", features = [
  "blocking",
  "rustls-tls-webpki-roots",
], default-features = false }
semver = "1.0.26"
serde = "1.0.219"
serde_yaml = "0.9.34"
sha256 = "1.6.0"
syn = "1.0.109"
tempfile = "3.20.0"
walrus = "0.23.3"
wasmparser = "0.235.0"
rustc-demangle = "0.1.25"
