[package]
name = "canbench-rs-macros"
version = "0.1.5"
edition = "2021"
license = "Apache-2.0"
description = "Macros for canbench-rs"
repository = "https://github.com/dfinity/canbench"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn = { workspace = true, features=["full"] }
