[package]
name = "canbench-rs"
description = "The rust library for `canbench`, the benchmarking framework for canisters on the Internet Computer."
edition = "2021"
keywords = ["benchmark", "canister", "ic", "internet-computer", "perf"]
license = "Apache-2.0"
readme = "../README.md"
repository = "https://github.com/dfinity/canbench"
# NOTE: Update `canbench-rs-macros` version below when this changes.
version = "0.1.15"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
canbench-rs-macros = { path = "../canbench-rs-macros", version = "0.1.15" }
candid.workspace = true
ic-cdk.workspace = true
serde.workspace = true

[dev-dependencies]
ic-cdk-macros.workspace = true

[features]
canbench = [] # required for doc tests
