[package]
description = "The rust library for `canbench`, the benchmarking framework for canisters on the Internet Computer."
edition = "2021"
keywords = ["benchmark", "canister", "ic", "internet-computer", "perf"]
license = "Apache-2.0"
name = "canbench-rs"
readme = "../README.md"
repository = "https://github.com/dfinity/canbench"
# Version is set by a Github workflow from the git tag
version = "0.0.0-git"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[dependencies]
# canbench-rs-macros version tag is set by a Github workflow from the git tag 
canbench-rs-macros = { path = "../canbench-rs-macros" }
candid.workspace = true
ic-cdk.workspace = true
serde.workspace = true

[features]
calls = []
canbench = [] # required for doc tests
