[package]
name = "tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "measurements_output"
path = "measurements_output/src/main.rs"

[[bin]]
name = "gzipped_wasm"
path = "gzipped_wasm/src/main.rs"

[[bin]]
name = "init_arg"
path = "init_arg/src/main.rs"

[dependencies]
canbench-rs = { path = "../canbench-rs" }
candid.workspace = true
ic-cdk.workspace= true
ic-cdk-macros.workspace= true
serde.workspace = true
